Use the node properties to store the settings id